# 1KCubeSat_Software

./: README.md
avionics/: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
avionics/src/: avi.rs  main.rs  messages.proto
avionics/src/protos/: no_std.rs
eps/: .gitignore  Cargo.toml  README.md  openocd.cfg
eps/openocd_cfg/interface/: stlink-tcp.cfg  stlink.cfg
eps/src/: eps.rs  main.rs  messages.proto
eps/src/protos/: no_std.rs
eps/svd/: Contents.txt  README.md  STM32F100.svd  STM32F102.svd  STM32F217.svd  STM32F301.svd  STM32F302.svd  STM32F401.svd  STM32F405.svd  STM32F410.svd  STM32F413.svd  STM32F427.svd  STM32F429.svd  STM32F730x.svd  STM32F7x3.svd  STM32F7x5.svd  STM32F7x7.svd  STM32F7x9.svd  STM32G4xx.svd  STM32H7x5_CM4.svd  STM32L0x1.svd  STM32L0x2.svd  STM32L152.svd  STM32L496.svd  STM32L4x1.svd  STM32L4x3.svd
openocd_cfg/: README.md
openocd_cfg/board/: stm32_st_board.vm
protobuf_test/: Cargo.toml  README.md
protobuf_test/src/: main.rs  messages.proto  messages.rs  mod.rs
sun_sensor_test/: Cargo.toml  README.md  memory.x  openocd.cfg
sun_sensor_test/.cargo/: config
sun_sensor_test/src/: lib.rs  main.rs
svd/: STM32F0x1.svd  STM32F101.svd  STM32F103.svd  STM32F107.svd  STM32F215.svd  STM32F303.svd  STM32F373.svd  STM32F407.svd  STM32F411.svd  STM32F412.svd  STM32F446.svd  STM32F469.svd  STM32F750x.svd  STM32F7x2.svd  STM32F7x6.svd  STM32G031.svd  STM32H750x.svd  STM32H7x3.svd  STM32H7x5_CM7.svd  STM32L0x3.svd  STM32L100.svd  STM32L476.svd  STM32L4R5.svd  STM32L4x2.svd  STM32L4x5.svd  STM32L4x6.svd
